--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -21,6 +21,10 @@
   color: #eee;
 }
 
+.Contact .status {
+  cursor: pointer;
+}
+
 /* Status text */
 .Contact .status .status-text {
   color: #999;
